--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.1.2",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
+    "multer-gridfs-storage": "^3.0.1",
     "npm-install-webpack-plugin": "^4.0.5",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
